# AI-Assistant-Client

./: .gitignore  CHANGELOG.md  DESKTOP.md  README.md  app.js  build-android-apk.ps1  build-desktop-exe.ps1  build-tauri-assets.ps1  build-tauri-desktop.ps1  build-windows-installer.ps1  index.html  package-lock.json  package.json  server.js  settings.gradle  styles.css
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: app.js
app/src/main/java/com/dzc/aiassistant/: MainActivity.java
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/values/: styles.xml
desktop/: Cargo.toml
desktop/src/: main.rs
installer/: Cargo.toml
installer/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
