[package]
name = "ai-assistant-client-installer"
version = "1.0.6"
edition = "2021"

[[bin]]
name = "AI-Assistant-Client-Setup"
path = "src/main.rs"

[dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
