[package]
name = "ai_assistant_client"
version = "1.0.6"
description = "AI Assistant Client"
authors = ["dongzhongcen"]
edition = "2021"

[lib]
name = "ai_assistant_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
tauri-plugin-shell = "2.3.0"
tauri-plugin-fs = "2.4.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-clipboard-manager = "2.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
